--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Introduction"
-description: "Welcome to the new for your documentation"
+title: "Not Poop"
+description: "Hello Poop World!"
 ---
 
 ## Setting up
